# hyperliquid-predictor

./: .gitignore  CHANGELOG.md  README.md  TODO.md  batch_feature_analysis.py  best_hyperparameters_BTC_USDT.json  config.py  hyperparameter_tuning.py  main.py  pyproject.toml  tune.py
.github/: copilot-instructions.md
backtest/: engine.py
data/: best_hyperparameters_HYPE_USDT.json  processor.py
