[project]
name = "cryptocurrency-predictor"
version = "0.1.0"
description = "Machine learning-based cryptocurrency price movement predictor using XGBoost"
requires-python = ">=3.10"

dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
